# EndstoneShuffle

./: CMakeLists.txt  README.md
.github/workflows/: cmake-build.yml  cmake-compile.yml
src/: endstone_shuffle.cpp  stone_shuffle.cpp
src/include/: endstone_shuffle.h  json_loader.h  stone_shuffle.h
src/json/: json_loader.cpp
